--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ body {
   text-align: center;
 }
 
+.square-painted {
+  background: #000;
+}
+
 .board {
   display: grid;
 }
@@ -65,4 +69,57 @@ body {
 
 .game-info {
   margin-left: 20px;
+}
+
+.toggle-switch-container {
+  position: relative;
+  width: 50px;
+  height: 24px;
+  background-color: #ccc;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.toggle-switch-container {
+  position: relative; /* Necessary for absolute positioning of toggle-switch */
+}
+
+.toggle-switch {
+  position: absolute;
+  top: 50%;
+  left: 2px; /* Adjust as needed */
+  transform: translate(0%, -50%); /* Center vertically and horizontally */
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: left 0.3s ease;
+  cursor: pointer; /* Add cursor for hover effect */
+  display: flex; /* Center content horizontally */
+  justify-content: center;
+  align-items: center;
+}
+
+.toggle-switch.checked {
+  left: calc(100% - 22px);
+}
+
+.toggle-switch-cross {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 12px; /* Adjust font size as needed */
+  color: #000; /* Adjust color as needed */
+  font-weight: bold; /* Make the X bold */
+}
+
+.toggle-switch-square {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50%;
+  background-color: #000; /* Adjust color as needed */
 }
