--- a/src/index.css
+++ b/src/index.css
@@ -96,9 +96,15 @@ body {
   justify-content: flex-end;
   align-items: center;
   background: #b9d6e0;
-  border-radius: 8px;
+  border-radius: 4px;
   margin: 5px;
   padding: 3px;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+}
+
+.clue-complete {
+  background: #00FF00;
 }
 
 .clue div {
