--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,35 @@ body {
   height: 50%;
   background-color: #000; /* Adjust color as needed */
 }
+
+.winner-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.winner-box {
+  background-color: #111;
+  padding: 20px;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.winner-text {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.winner-icon img {
+  width: 50px; /* Ajusta el tamaño del icono según sea necesario */
+}
+
